--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,11 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e38056e",
+   "cell_type": "markdown",
+   "id": "ae5f3442",
    "metadata": {},
-   "outputs": [],
    "source": [
     "for 循环中会用到的\n",
     "zip\n",
@@ -13,23 +11,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c35478f",
+   "cell_type": "markdown",
+   "id": "74e1929c",
    "metadata": {},
-   "outputs": [],
    "source": [
     "深copy和浅copy"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8eac2aec",
+   "cell_type": "markdown",
+   "id": "ca6f3153",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "yield返回生成器，跟return类似"
+    "yield返回生成器，跟return类似。"
    ]
   },
   {
@@ -147,12 +141,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea982268",
+   "metadata": {},
+   "source": [
+    "： 冒号，类型声明。greeting 函数中，参数 name 的类型是 str，返回类型也是 str。子类型也可以当作参数。\n",
+    "https://www.cnblogs.com/poloyy/p/15145380.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b54eceae",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def greeting(name: str) -> str:\n",
+    "    return 'Hello ' + name\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "281c544d",
+   "metadata": {},
+   "source": [
+    "借助Numpy matrix.ravel()方法，我们可以从给定的矩阵中获取扁平化矩阵。\n",
+    "np.matrix与np.array有些不同，matrix必须是二维的，而且相乘的话就是直接矩阵乘积，而array需要用np.dot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a0de9b45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4]]\n",
+      "[[1 2 3 4]]\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a=np.matrix([1,2,3,4])\n",
+    "print(a)\n",
+    "b=a.ravel()\n",
+    "print(b)\n",
+    "print(b.shape[1])"
+   ]
   }
  ],
  "metadata": {
