--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -166,7 +166,10 @@
    "metadata": {},
    "source": [
     "借助Numpy matrix.ravel()方法，我们可以从给定的矩阵中获取扁平化矩阵。\n",
-    "np.matrix与np.array有些不同，matrix必须是二维的，而且相乘的话就是直接矩阵乘积，而array需要用np.dot()"
+    "np.matrix与np.array有些不同，matrix必须是二维的，而且相乘的话就是直接矩阵乘积，而array需要用np.dot()\n",
+    "flatten()，以及ravel()对于array直接展平为一维数组，对于matrix展平的同 时保留原有维数和类型\n",
+    "A1命令只针对matrix类型，直接展平为一维数组，而不是一维矩阵（也没有一维矩阵233）\n",
+    "ps：多说一句，即使是对array类型的展平，flatten()和ravel()的效果是完全相同的，但机理不同，**ravel的展平是一种引用，flatten则是深拷贝**"
    ]
   },
   {
