--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f58fdb09",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "669ab8b5",
    "metadata": {},
    "outputs": [],
@@ -51,20 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7aca296d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in mygenerator:\n",
     "    print(i)"
@@ -72,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f7f1f514",
    "metadata": {},
    "outputs": [],
@@ -83,19 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1bdc167b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a\n",
-      "b\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#将函数放在列表中去\n",
     "def a():\n",
@@ -119,18 +100,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c340a389",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1], [1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#初始化列表的时候要注意，如果要使用append，不能够使用这种方法，列表生成式比较合适\n",
     "lista=[[]]*100\n",
@@ -174,20 +147,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a0de9b45",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 2 3 4]]\n",
-      "[[1 2 3 4]]\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "a=np.matrix([1,2,3,4])\n",
@@ -195,6 +158,154 @@
     "b=a.ravel()\n",
     "print(b)\n",
     "print(b.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c59d7913",
+   "metadata": {},
+   "source": [
+    "python 从list中随机取值\n",
+    "https://blog.csdn.net/weixin_39791387/article/details/84958436\n",
+    "random.sample\n",
+    "random.choice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03fb542f",
+   "metadata": {},
+   "source": [
+    "python 按照对象某一属性排序\n",
+    "sorted (key= lamba x:x[0]) #新的list\n",
+    "list_sort #原有的list修改"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ddf9985",
+   "metadata": {},
+   "source": [
+    "dataframe.isin()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8454043",
+   "metadata": {},
+   "source": [
+    "sigmoid函数，当输入的数值特别大的时候，可能由于精度问题，返回值为1，所以计算log(1-sigmoid)可能会返回nan，所以我们需要其它的方法。\n",
+    "比如，log(1 - max(sigmoid(z), EPSILON)))，定义一个最大精度.归一化或者标准化也是一个解决问题的办法。\n",
+    "\n",
+    "定义上限和下限"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e239a04c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(x):\n",
+    "    sig = 1 / (1 + np.exp(-x))     # Define sigmoid function\n",
+    "    sig = np.minimum(sig, 0.9999)  # Set upper bound\n",
+    "    sig = np.maximum(sig, 0.0001)  # Set lower bound\n",
+    "    return sig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a212bb97",
+   "metadata": {},
+   "source": [
+    "decimal模块，高精度的十进制浮点数,但是也只能精确到后28位，太高的变量，输出依然是1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "78aea3c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Decimal('0.9999999999999999999999999970')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from decimal import Decimal\n",
+    "import numpy as np\n",
+    "import math\n",
+    "def sigmoid(z):\n",
+    "    sig = Decimal(1.0)/(Decimal(1.0) + Decimal(np.exp(-z)))\n",
+    "    return sig\n",
+    "sigmoid(61)\n",
+    "#math.log(Decimal(1)-sigmoid(100))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b696d8a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from decimal import *\n",
+    "getcontext().prec = 28 \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "44bf77ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Decimal('0.9999999999999999999999999910')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sigmoid(z):\n",
+    "    \n",
+    "    if z >= 0:  # 对sigmoid函数的优化，避免了出现极大的数据溢出\n",
+    "        return Decimal(1.0) / (Decimal(1.0) + Decimal(np.exp(-z)))\n",
+    "    else:\n",
+    "        return Decimal(np.exp(z)) / (Decimal(1.0) + Decimal(np.exp(z)))\n",
+    "    \n",
+    "sigmoid(60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9de34d30",
+   "metadata": {},
+   "source": [
+    "jieba   分词工具包"
    ]
   }
  ],
